maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:2: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:2: error: expected start of definition
override def run() {
         ^Escaper:9: error: unclosed comment
    /*while (quitterMur(sommeAngle)) {
    ^Escaper:79: error: Missing closing brace `}' assumed here
}
 ^Escaper:79: error: Missing closing brace `}' assumed here
}
 ^